# VernamVault

./: .gitignore  Cargo.toml  README.md
docs/: PLAN.md
src/: main.rs
