[package]
name = "vernamvault"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
txt_otp = "2.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
